2007-08-09  Paf <paf@tuxfamily.org>
	* src/core/tests/zelda: File added
	* src/core/include/attributehandlerregistry.h: File added
	* src/core/include/integer.h: File added
	* src/core/include/genericattributehandler.h: File added
	* src/core/include/basemanager.h: File added
	* src/core/include/iattributehandler.h: File added
	* src/core/include/integerattributehandler.h: File added
	* src/core/include/persistentobjectmanager.h: File added
	* src/core/src/persistentobjectmanager.cpp: File added
	* src/core/src/attributehandlerregistry.cpp: File added
	* INSTALL: Updated
	* src/core/tests/testpo.cpp: Updated to use the PersistentObjectManager
	* src/core/include/filestream.h
	* src/core/include/sourcefile.h
	* src/core/include/istream.h
	* src/core/include/scalar.h
	* src/core/include/isource.h
	* src/core/include/iattribute.h
	* src/core/include/persistentobject.h
	* src/core/src/sourcefile.cpp
	* src/core/src/persistentobject.cpp
	* src/core/src/filestream.cpp
	* src/core/Makefile
	* src/graphic/src/cgraphicmodule.cpp
	* src/core/src/basemanager.cpp: File removed

2007-07-18  Paf <paf@tuxfamily.org>
	* src/core/tests/testpo.cpp: Updated to play with FileSource and
	IStream classes
	* src/core/include/scalar.h: Change Glib::ustring to std::string
	* include/filestream.h: File added
	* include/sourcefile.h: File added
	* include/istream.h: File added
	* include/isource.h: File added
	* src/sourcefile.cpp: File added
	* src/filestream.cpp: File added

2007-07-13  Yellow <yellow.fr@gmail.com>
	* src/core/include/singleton.h: 'Singleton' ambiguous symbol, change to '::Singleton'
	* src/graphic/src/cscenefactorystd.cpp: Change Glib::ustring to std::string
	* src/graphic/src/cscenefactorystd.h: Change Glib::ustring to std::string
	* src/graphic/src/csceneparser.cpp: Change Glib::ustring to std::string
	* src/graphic/src/csceneparser.h: Change Glib::ustring to std::string

2007-07-10  Paf <paf@tuxfamily.org>